[Translations] Updated translations from Crowdin

--- a/Resources/translations/flashes.sr.yml
+++ b/Resources/translations/flashes.sr.yml
@@ -3,9 +3,9 @@
 
 sylius:
   cart:
-    cart_save_completed: Korpa je uspešno ažurirana.
-    cart_clear_completed: Korpa je uspešno ispražnjena.
-    item_add_completed: Stavka je dodata u korpu.
-    item_remove_completed: Stavka je izbačena iz korpe.
-    item_add_error: Dogodila se greška dok se stavka dodavala u korpu.
-    item_remove_error: Dogodila se greška dok se stavka uklanjala iz korpe.
+    cart_save_completed: Корпа је успешно ажурирана.
+    cart_clear_completed: Корпа је успешно испражњена.
+    item_add_completed: Артикал је додат у корпу.
+    item_remove_completed: Артикал је уклоњен из корпе.
+    item_add_error: Дошло је до грешке приликом додавања артикла у корпу.
+    item_remove_error: Дошло је до грешке приликом уклањања артикла из корпе.
