--- a/Resources/translations/flashes.de.yml
+++ b/Resources/translations/flashes.de.yml
@@ -3,9 +3,9 @@
 
 sylius:
   cart:
-    cart_save_completed: Der Warenkorb wurde erfolgreich aktualisiert.
-    cart_clear_completed: Der Warenkorb wurde geleert.
-    item_add_completed: Das Produkt wurde zum Warenkorb hinzugefügt.
-    item_remove_completed: Das Produkt wurde vom Warenkorb entfernt.
-    item_add_error: Beim hinzufügen des Artikels ist ein Fehler aufgetreten.
-    item_remove_error: Beim entfernen des Artikels ist ein Fehler aufgetreten.
+    cart_save_completed: Der Warenkorb wurde erfolgreich gespeichert.
+    cart_clear_completed: Der Warenkorb wurde erfolgreich geleert.
+    item_add_completed: Artikel wurde dem Warenkorb hinzugefügt.
+    item_remove_completed: Artikel wurde aus dem Warenkorb entfernt.
+    item_add_error: Während des Hinzufügens des Artikels ist ein Fehler aufgetreten.
+    item_remove_error: Während des Entfernens des Artikels ist ein Fehler aufgetreten.
